# inecocores

./: LICENSE  README.md  __init__.py  pyproject.toml
src/inecocores/: core.py
