[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inecocores"
version = "0.1.7"
authors = [
  { name="Tititab Srisookco", email="k.pop@ineco.co.th" },
]
description = "Public INECO method"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thitithup/inecocores.git"
"Bug Tracker" = "https://github.com/thitithup/inecocores.git/issues"